k3s-node/k3s-config/node-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  namespace: node-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: sujanshresthahck/node-app:v2
        imagePullPolicy: "Always"
        ports:
          - containerPort: 4400
