k3s-node/k3s-config/node-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-loadbalancer
  namespace: node-application
  labels:
    app: node-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 4400
  selector:
    app: node-app
