k3s-node/k3s-config/node-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  namespace: node-application
  annotations:
    # Traefik-specific annotation (optional but useful)
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: demoapplication.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app-loadbalancer
                port:
                  number: 80
